--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             </div>
             
         </div>
-        <div class="grid" id="grid"></div>
+        <div class="grid-container" id="grid-container">
+            <div class="grid" id="grid">
+            </div>
+        </div>
     </main>
     <footer>Aqui decimos gracias</footer>
     <script src="./index.js"></script>
