--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
             <button class="btn" id="eraser">Eraser</button>
             <button class="btn" id="reset">Reset</button>
             <div class="slidecontainer">
-                <div class="grid-size" id="grid-size"> 16 x 16</div>
-                <input type="range" min="1" max="128" value="16" class="grid-control" id="grid-control">
+                <div class="grid-size" id="grid-size"></div>
+                <input type="range" min="4" max="64" value="16" class="grid-control" id="grid-control">
             </div>
             
         </div>
-        <div class="grid-container" id="grid-container">
+
+
             <div class="grid" id="grid">
             </div>
-        </div>
+
+        
     </main>
     <footer>Aqui decimos gracias</footer>
     <script src="./index.js"></script>
