the color picked only works on default grid

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1 class="title">Etch-A-Sketch</h1>
     <main class="main">
         <div class="control-container">
-            <button class="btn" id="color-mode">Color</button>
+            <button class="btn" id="color-mode">
+                <input type="color" id="colorpicker" value="#FFFFFF">Color</button>
             <button class="btn" id="rainbow-mode">Rainbow</button>
             <button class="btn" id="eraser">Eraser</button>
             <button class="btn" id="reset">Reset</button>
